Add temporary README

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tailwind-travel",
   "version": "1.0.0",
   "description": "",
-  "main": "./public/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tailwindcss -i ./src/css/tailwind.css -o ./public/css/tailwind.css --watch",
